Landing_Page.css
html {
    scroll-behavior: smooth;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);
    min-height: 100vh;
    margin: 0;
}


/* NAVBAR */

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 20px;
    background: black;
}


/* BRAND GROUP */

.brand {
    display: flex;
    align-items: center;
    gap: 10px;
}


/* LOGO */

.logo {
    height: 42px;
    width: auto;
    display: block;
}


/* BRAND TEXT */

.brand-text {
    height: 26px;
    width: auto;
    /* tweak until it looks right */
    display: block;
}


/* NAV LINKS */

.nav-links {
    list-style: none;
    display: flex;
    gap: 18px;
}

.nav-links a {
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: white;
    padding: 6px 6px;
    transition: 0.3s;
}

.social-fb {
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: white;
    height: 24px;
    width: 24px;
    transition: 0.3s;
}

.social-ig {
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: white;
    height: 24px;
    width: 24px;
    transition: 0.3s;
}

.social-tiktok {
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: white;
    height: 24px;
    width: 24px;
    transition: 0.3s;
}

.nav-links a:hover {
    color: #90BADA;
}


/* MOBILE */

@media (max-width: 600px) {
    .logo {
        height: 34px;
    }
    .brand-text {
        font-size: 1rem;
    }
}

